<resources>
    <string name="app_name">SnapIt</string>

    <string name="splash_icon">Splash Icon</string>
    <string name="snap_it">SnapIt</string>
    <string name="welcome_icon">Welcome Icon</string>
    <string name="capture_the_moment">Capture The Moment</string>
    <string name="description">Capture all your moments and turn them into beautiful memories. Tell everything that you feel.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_desc">Login to continue using the app</string>
    <string name="email">Email</string>
    <string name="title_dialog_error">Oops something wrong</string>
    <string name="message_incorrect_auth">Email or password incorrect</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="error_password_more_8">Password must more than 8 character</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="label_greeting_user">Hello, %1$s!</string>
    <string name="upload_failed">Upload failed</string>
    <string name="to_register">Register here</string>
    <string name="register_desc">Enter your Personal Information</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="name">Username</string>
    <string name="title_profile">Profile</string>
    <string name="title_new_story">Add New Story</string>
    <string name="title_choose_a_picture">Choose a picture</string>
    <string name="enter_your_name">Enter your Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="login_success">Login Success</string>
    <string name="label_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="img_detail">img_detail</string>
    <string name="img_story">Img Story</string>
    <string name="add_button">Add Button</string>
    <string name="camera">Camera</string>
    <string name="message_logout_confirm">Are you sure want logout?</string>
    <string name="action_cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="camera_caps">CAMERA</string>
    <string name="gallery_caps">GALLERY</string>
    <string name="write_your_story_here">Write your story here</string>
    <string name="upload_story">UPLOAD STORY</string>
    <string name="upload_successful">Upload Success</string>
    <string name="upload_info">Upload Info</string>
    <string name="empty_text">No Data</string>
    <string name="setting">Setting</string>
    <string name="title_message">Info</string>
    <string name="message_pick_image">Pick an image first</string>
    <string name="register_success">Register Success</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="app_widget_description">Story App Image Banner Widget</string>
    <string name="retry">Retry</string>
    <string name="message_error_stories">Stories not found</string>
    <string name="label_share_location">Share your location</string>
    <string name="message_location_not_found">Location is not found. Try again</string>
    <string name="action_change_setting">Change Setting</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="title_story_maps">Story Maps</string>
    <string name="message_loading_map">Loading map....</string>
    <string name="location">location</string>
    <string name="account">account</string>
</resources>