<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bone"
    tools:context=".ui.story.add.AddActivity">

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/img_story"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/camera_caps"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPreview" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/gallery_caps"
        android:translationZ="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPreview" />

    <EditText
        android:id="@+id/edtStoryDesc"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/poppins"
        android:gravity="top|start"
        android:hint="@string/write_your_story_here"
        android:inputType="textMultiLine"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenGallery" />

    <TextView
        android:id="@+id/tvShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/label_share_location"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/edtStoryDesc"
        app:layout_constraintTop_toBottomOf="@id/edtStoryDesc" />

    <CheckBox
        android:id="@+id/cbShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtStoryDesc"
        app:layout_constraintTop_toBottomOf="@+id/edtStoryDesc" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/upload_story"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>