<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bone"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvGreetingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/label_greeting_user"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/location"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/tvGreetingName"
        app:layout_constraintEnd_toStartOf="@+id/btnAccount"
        app:layout_constraintTop_toTopOf="@+id/tvGreetingName" />

    <ImageButton
        android:id="@+id/btnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/account"
        android:src="@drawable/ic_account"
        app:layout_constraintBottom_toBottomOf="@+id/tvGreetingName"
        app:layout_constraintEnd_toStartOf="@+id/btnSetting"
        app:layout_constraintTop_toTopOf="@+id/tvGreetingName" />

    <ImageButton
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/setting"
        android:src="@drawable/ic_setting"
        app:layout_constraintBottom_toBottomOf="@+id/tvGreetingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGreetingName" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvGreetingName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/tvStoriesError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_error_stories"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetingName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@+id/shimmerLoading"
        tools:listitem="@layout/item_row" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>